adding more projects

--- a/index.html
+++ b/index.html
@@ -59,11 +59,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Pratik N. Tulkane and I'm a <span>Front-End Developer</span></div>
-                    <p>I've completed my post graduation in MCM (Master of Computer Management).I am
-                        an ambitious,confident,hard-working performance-driven individual comfortable in
-                        working individually and contributing towards an integral team effort.I am casting
-                        around for a Front End Developer role where I can apply my knowledge of HTML, CSS
-                        and JAVASCRIPT.
+                    <p>I've completed my post graduation in MCM (Master of Computer Management).I am an ambitious,confident,hard-working performance-driven individual comfortable in working individually and contributing towards an integral team effort.I am casting around for a Front End Developer role where I can apply my knowledge of HTML, CSS and JAVASCRIPT.</p>
                         <a href="https://drive.google.com/file/d/1zWYoHsJZyhf8OpNqsHiFlSChFnJTMuhR/view?usp=sharing">Download
                             CV</a>
                 </div>
@@ -105,7 +101,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>React.js</span>
-                            <span>30%</span>
+                            <span>40%</span>
                         </div>
                         <div class="line react-js"></div>
                     </div>
@@ -121,24 +117,34 @@
             <div class="portfolio-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-hamburger"></i>
-                        <div class="text">Restaurant Landing Page</div>
-                        <p>By using HTML and CSS </p>
-                        <a href="https://pratik-tulkane14.github.io/Online-Food-Delivery-website/"
-                            class="get-link">Live</a> |
-                        <a href="https://github.com/Pratik-Tulkane14/Online-Food-Delivery-website"
-                            class="get-link">Github</a>
+                        <i class="fas fa-code"></i>
+                        <div class="text">Projects based on React Js</div>
+                        <p>Weather App <a href="https://weather-app-c2e2.netlify.app/"
+                            class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/weather-details-app"
+                            class="get-link">Github</a></p>
+                        <p>Online Text-Editor <a href="https://text-editor-a1.netlify.app/"
+                            class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/Text-Editor-app"
+                            class="get-link">Github</a></p>
+                        <p>Food Hub <a href="https://food-hub-app.netlify.app/"
+                            class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/Food_Hub"
+                            class="get-link">Github</a></p>
                     </div>
                 </div>
+                
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Notes Application</div>
-                        <p>Using HTML ,CSS and JavaScript Fully responsive application that can be run in Pc,tablet and
-                            smartphone </p>
-                        <a href="https://pratik-tulkane14.github.io/My-Notes-/" class="get-link">Live</a> |
-                        <a href="https://github.com/Pratik-Tulkane14/My-Notes-" class="get-link">Github</a>
-                    </div>
+                        <div class="text">Responsive Websides</div>
+                        <p>Notes App <a href="https://pratik-tulkane14.github.io/My-Notes-/"
+                            class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/My-Notes-"
+                            class="get-link">Github</a></p>
+                        <p>Landing Page <a href="https://pratik-tulkane14.github.io/Nvest-Landing-page/"
+                            class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/Nvest-Landing-page"
+                            class="get-link">Github</a></p>
+                        <p>Restaurant App <a href="https://pratik-tulkane14.github.io/Calculator-/"
+                            class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/Calculator-"
+                            class="get-link">Github</a></p>
+                        </div>
                 </div>
                 <div class="card">
                     <div class="box">
@@ -153,6 +159,14 @@
                         <p>Counter <a href="https://pratik-tulkane14.github.io/Counter-/" class="get-link">Live</a> | <a
                                 href="https://github.com/Pratik-Tulkane14/Counter-" class="get-link">Github</a></p>
                     </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Figma Design</div>
+                        <p>JYT UI  |<a href="https://www.figma.com/files/project/47937666/Team-project?fuid=1061972227797444785"
+                                class="get-link"> Link</a></p>
+                       </div>
                 </div>
             </div>
         </div>
@@ -226,7 +240,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="#">Pratik N.Tulkane</a> | <span class="far fa-copyright"></span> 2021 All rights
+        <span>Created By <a href="#">Pratik N.Tulkane</a> | <span class="far fa-copyright"></span> 2022 All rights
             reserved.</span>
     </footer>
 
