--- a/index.html
+++ b/index.html
@@ -87,23 +87,30 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>60%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>60%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>React.js</span>
-                            <span>40%</span>
+                            <span>65%</span>
                         </div>
                         <div class="line react-js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Figma</span>
+                            <span>50%</span>
+                        </div>
+                        <div class="line figma"></div>
                     </div>
                 </div>
             </div>
