adding more projects

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Pratik N. Tulkane and I'm a <span>Front-End Developer</span></div>
-                    <p>I've completed my post graduation in MCM (Master of Computer Management).I am an ambitious,confident,hard-working performance-driven individual comfortable in working individually and contributing towards an integral team effort.I am casting around for a Front End Developer role where I can apply my knowledge of HTML, CSS and JAVASCRIPT.</p>
-                        <a href="https://drive.google.com/file/d/1zWYoHsJZyhf8OpNqsHiFlSChFnJTMuhR/view?usp=sharing">Download
+                    <p>I've completed my post graduation in MCM (Master of Computer Management).I am an ambitious,confident,hard-working performance-driven individual comfortable in working individually and contributing towards an integral team effort.I am casting around for a Front End Developer role where I can apply my skills.</p>
+                        <a href="https://drive.google.com/file/d/1u8h8vapsfBtK9RvFQZn2P3v6wvGl-RGM/view?usp=sharing">Download
                             CV</a>
                 </div>
             </div>
@@ -126,13 +126,13 @@
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Projects based on React Js</div>
-                        <p>Weather App <a href="https://weather-app-c2e2.netlify.app/"
-                            class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/weather-details-app"
+                        <p>Online Text-Editor <a href="https://online-text-editor-free.netlify.app/"
+                            class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/online-text-editor"
                             class="get-link">Github</a></p>
-                        <p>Online Text-Editor <a href="https://text-editor-a1.netlify.app/"
-                            class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/Text-Editor-app"
-                            class="get-link">Github</a></p>
-                        <p>Food Hub <a href="https://food-hub-app.netlify.app/"
+                        <p>Weather App <a href="https://weather-app-c2e2.netlify.app"
+                                class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/weather-details-app"
+                                class="get-link">Github</a></p>
+                        <p>Food Hub <a href="https://food-hub-app.netlify.app"
                             class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/Food_Hub"
                             class="get-link">Github</a></p>
                     </div>
@@ -145,11 +145,8 @@
                         <p>Notes App <a href="https://pratik-tulkane14.github.io/My-Notes-/"
                             class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/My-Notes-"
                             class="get-link">Github</a></p>
-                        <p>Landing Page <a href="https://pratik-tulkane14.github.io/Nvest-Landing-page/"
+                        <p>Nvest website <a href="https://pratik-tulkane14.github.io/Nvest-Landing-page/"
                             class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/Nvest-Landing-page"
-                            class="get-link">Github</a></p>
-                        <p>Restaurant App <a href="https://pratik-tulkane14.github.io/Calculator-/"
-                            class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/Calculator-"
                             class="get-link">Github</a></p>
                         </div>
                 </div>
@@ -157,6 +154,9 @@
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Project based on JavaScript</div>
+                        <p>Tic tac toe game <a href="https://pratik-tulkane14.github.io/Tic_Tac_Toe_App/"
+                                class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/Tic_Tac_Toe_App"
+                                class="get-link">Github</a></p>
                         <p>Calculator <a href="https://pratik-tulkane14.github.io/Calculator-/"
                                 class="get-link">Live</a> | <a href="https://github.com/Pratik-Tulkane14/Calculator-"
                                 class="get-link">Github</a></p>
@@ -172,6 +172,8 @@
                         <i class="fas fa-code"></i>
                         <div class="text">Figma Design</div>
                         <p>JYT UI  |<a href="https://www.figma.com/files/project/47937666/Team-project?fuid=1061972227797444785"
+                                class="get-link"> Link</a></p>
+                        <p>Landing page  |<a href="https://www.figma.com/proto/9j7qMa0HJlNNBVS184Dckl/Covid-19-UI?node-id=2%3A62"
                                 class="get-link"> Link</a></p>
                        </div>
                 </div>
